--- a/package.json
+++ b/package.json
@@ -31,12 +31,15 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@fontsource/plus-jakarta-sans": "^5.0.20",
+    "@types/react-grid-layout": "^1.3.5",
     "framer-motion": "^11.2.6",
     "million": "3.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-grid-layout": "^1.4.4",
     "react-helmet": "^6.1.0",
     "react-icons": "^5.2.1",
+    "react-resizable": "^3.0.5",
     "react-router-dom": "^6.23.1"
   },
   "devDependencies": {
