--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "push-release": "git push --follow-tags origin main"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.8.2",
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/sortable": "^8.0.0",
@@ -32,11 +33,17 @@
     "@emotion/styled": "^11.11.5",
     "@fontsource/plus-jakarta-sans": "^5.0.20",
     "@types/react-grid-layout": "^1.3.5",
+    "apexcharts": "^3.52.0",
     "framer-motion": "^11.2.6",
+    "gridstack": "^10.3.1",
+    "gridstack-react-wrapper": "^0.0.1",
     "million": "3.1.1",
+    "re-resizable": "^6.9.17",
     "react": "^18.3.1",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^18.3.1",
     "react-grid-layout": "^1.4.4",
+    "react-gridstack": "^0.1.4",
     "react-helmet": "^6.1.0",
     "react-icons": "^5.2.1",
     "react-resizable": "^3.0.5",
@@ -45,6 +52,7 @@
   "devDependencies": {
     "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
+    "@types/gridstack": "^0.5.2",
     "@types/node": "^20.12.12",
     "@types/react": "18.3.2",
     "@types/react-dom": "^18.3.0",
